[AlphaPolo] add: 多數功能
add:
- 渲染循環方式
- 砲彈
- wave manager
- tower 渲染架構
- tower 種類區別

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,14 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
+  assets:
+  - assets/images/air.png
+  - assets/images/electricity.png
+  - assets/images/fire.png
+  - assets/images/ice.png
 flr:
   core_version: 3.2.0
   dartfmt_line_length: 80
-  assets: []
+  assets:
+  - assets/images
   fonts: []
