--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^4.2.0
   firebase_ui_auth: ^1.1.3
   flame: ^1.6.0
+  badges: ^3.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
