--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,13 @@ description: A new Flutter project.
 publish_to: none
 version: 1.0.0+1
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
   r_dart_library: 0.4.1
-  collection: ^1.16.0
+  collection: ^1.17.0
   provider: ^6.0.4
   tuple: ^2.0.1
   vector_math: ^2.1.2
@@ -17,8 +17,9 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.0
   firebase_ui_auth: ^1.1.3
-  flame: ^1.6.0
+  flame: ^1.8.1
   badges: ^3.1.1
+  flutter_animate: ^4.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
